# brunel

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  neuron.h  readme.html
doc/: Doxyfile  Doxyfile.in
doc/html/: _current_8h_source.html  _experiment_8h_source.html  _network_8h_source.html  _neuron_8h_source.html  annotated.html  class_current-members.html  class_current.html  class_experiment-members.html  class_experiment.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  md___users_arnauddhaene__documents__git_hub_cppcourse-brunel_readme.html  menudata.js  pages.html
doc/results/: Gewaltig Plotter.ipynb
docs/: Doxyfile  Doxyfile.in  brunel_logo.ai  doxygen_log.txt
docs/html/: _experiment_8h_source.html  _network_8h_source.html  _neuron_8h_source.html  class_current.html  class_experiment.html  class_experiment_a3d86e85ded01394184615395473d5be1_icgraph.dot  class_experiment_a3d86e85ded01394184615395473d5be1_icgraph.md5  class_experiment_a40118f722fc1f349776f40324364d48f_icgraph.dot  class_experiment_a40118f722fc1f349776f40324364d48f_icgraph.md5  class_experiment_a7a0cf911df6c40f06af33080c27fc434_cgraph.dot  class_experiment_a7a0cf911df6c40f06af33080c27fc434_cgraph.md5  class_experiment_a92d955f5197b183f509dff19d18e3666_cgraph.dot  class_experiment_a92d955f5197b183f509dff19d18e3666_cgraph.md5  class_network.html  class_network_a163ac3a53b8ef0e228258fc0b6c30759_cgraph.dot  class_network_a163ac3a53b8ef0e228258fc0b6c30759_cgraph.md5  class_network_a163ac3a53b8ef0e228258fc0b6c30759_icgraph.dot  class_network_a163ac3a53b8ef0e228258fc0b6c30759_icgraph.md5  class_network_a2776775ea69c119870c97c3e72c5e583_icgraph.dot  class_network_a2776775ea69c119870c97c3e72c5e583_icgraph.md5  class_network_a295bcc4b0d7bdf0bea62524a78a3b049_cgraph.dot  class_network_a295bcc4b0d7bdf0bea62524a78a3b049_cgraph.md5  class_network_a71d33c6e8b521a6947258364955d4a5f_icgraph.dot  class_network_a71d33c6e8b521a6947258364955d4a5f_icgraph.md5  class_network_a8530afa201977ab3685c5d689c95cf43_icgraph.dot  class_network_a8530afa201977ab3685c5d689c95cf43_icgraph.md5  class_network_af8deb18dc3a03ee503723a198bf734f8_cgraph.dot  class_network_af8deb18dc3a03ee503723a198bf734f8_cgraph.md5  class_network_af8deb18dc3a03ee503723a198bf734f8_icgraph.dot  class_neuron.html  (+30 more)
html/: _buffer_8h_source.html  _current_8h_source.html  _experiment_8h_source.html  _network_8h_source.html  _neuron_8h_source.html  annotated.html  brunel_logo.eps  class_buffer-members.html  class_buffer.html  class_current-members.html  class_current.html  class_experiment-members.html  class_experiment.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  constants_8h_source.html  doxygen.css  files.html  functions.html  functions_func.html  index.html  menudata.js
results/: brunel.ipynb  rasterdataA.gdf  rasterdataB.gdf  rasterdataC.gdf  rasterdataD.gdf  rasterplot.ipynb
source/: Current.cpp  Current.h  Simulation.cpp  Simulation.h  constants.h  main.cpp  neuron.cpp  neuron.h
src/: Buffer.cpp  Buffer.h  Current.cpp  Current.h  Doxyfile  Experiment.cpp  Experiment.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Simulation.cpp  Simulation.h  constants.h  main.cpp
test/: brunel_test.cpp
(+40 files in other folders)
